--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -2,11 +2,10 @@
 <html>
 <head><title>Confirm Mining</title></head>
 <body>
-  <h2>Mining Confirmation</h2>
-  <p>This will cost you {{ cost }} TrashCoins for {{ num_mines }} mining attempts.</p>
+  <h2>Mining {{ num_mines }} times will cost {{ cost }} TrashCoins.</h2>
   <form method="POST" action="/confirm_mining">
-    <button type="submit">Proceed with Mining</button>
+    <input type="submit" value="Proceed">
   </form>
-  <a href="/">Cancel</a>
 </body>
 </html>
+
