--- a/templates/result.html
+++ b/templates/result.html
@@ -2,9 +2,10 @@
 <html>
 <head><title>Mining Result</title></head>
 <body>
-  <h2>Mining Complete!</h2>
+  <h2>Mining Complete</h2>
   <p>You spent {{ cost }} coins and gained {{ gained }} coins.</p>
-  <p>Your net profit was {{ profit }} coins.</p>
-  <a href="/">Back to Game</a>
+  <p>Your profit is {{ profit }} coins.</p>
+  <p>Total coins: {{ coins }}</p>
+  <a href="/">Back to home</a>
 </body>
 </html>
