--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     Welcome to Trash Coin, a meme-coin that was created for fun (1 TrashCoin = 0$). You will start with 10 TrashCoins. Enter the amount of mines into the mine field to try and mine, 
     you can see the cost of one mine below (the lower the better). The value of a mine changes randomly. If you run out of TrashCoin, you can still mine. You can NOT trade coins for real money
     (as they are worthless), please treat this just as a game, no real money is involved. The mining is done by picking 3 random numbers between 0 and 10, and if they all match, you get a coin. 
-    Please use responsibly, and remember NO REAL MONEY IS OR SHOULD BE INVOLVED
+    Please use responsibly, and remember NO REAL MONEY IS OR SHOULD BE INVOLVED.  - Please note that reloading the page after a mine will repeat the mine.
   </h5>
 
   <p>You have {{ coins }} coins.</p>
