--- a/templates/index.html
+++ b/templates/index.html
@@ -49,10 +49,11 @@
 
   {% if confirm_cost %}
     <p>This will cost: <strong>{{ confirm_cost }}</strong> TrashCoins.</p>
-    <form method="POST" action="/mine">
+    <form method="POST" action="/mine" id="mine-form" onsubmit="startMiningDelay(); return false;">
       <input type="hidden" name="mine_count" value="{{ mine_count }}">
-      <button type="submit">Proceed to Mine</button>
+      <button type="submit" id="mine-button">Proceed to Mine</button>
     </form>
+    <p id="mine-status"></p>
   {% else %}
     <form method="POST" action="/calculate_cost">
       <label for="mine_count">How many times do you want to mine?</label><br>
